--- a/assets/main.css
+++ b/assets/main.css
@@ -268,9 +268,46 @@ max-width:1200px; */
 .otherprojectslist a:hover{
 color:#DDA6F7;
 }
-  
 
 
+
+.home-list-item{
+  display:flex;
+  flex:1;
+  flex-direction: column;
+  border-top:1px rgba(255,255,255,0.2) solid;
+  justify-content:space-between;
+  align-items:stretch;
+  padding:3vh 0;
+}
+
+.home-list{
+  border-bottom:1px rgba(255,255,255,0.2) solid;
+}
+ 
+.home-list-desc, .home-list-title{
+  display:inline-block;
+  flex:1;
+  padding-right:1vmax;
+}
+
+.home-list-link{
+  display:inline-block;
+  flex:.6;
+  text-decoration: underline;
+}
+
+#work{
+  padding:6vh 0;
+}
+
+.home-title{
+  padding:2vh 0;
+}
+
+.home-wrap{
+  padding:4vh 4vw;
+}
 
 
 .inline-p{
@@ -506,11 +543,27 @@ li, h3{
 }
 
 .max600{
-  max-width:600px;
+  max-width: 600px;
   margin:0 auto;
 }
 
+.max60{
+  max-width: 60ch;
+}
+
+.home{
+  background-color: #201F22;
+  color:white;
+}
+
+.home a{
+  color:white;
+}
+
+
 @media only screen and (min-width: 800px) {
+
+
 
   body{
     font-size:1.5rem;
@@ -573,6 +626,29 @@ li, h3{
     .post > .image-contain{
       margin: 60px 0;
     }
+
+
+    .home-list-item{
+      flex-direction: row;
+      justify-content:space-between;
+      align-items:stretch;
+      padding:3vh 0;
+    }
+    
+     
+    .home-list-desc, .home-list-title{
+      display:inline-block;
+      flex:1;
+      padding-right:1vmax;
+    }
+    
+    .home-list-link{
+      display:inline-block;
+      flex:.6;
+      text-align:right;
+    }
+    
+
 }
 
 
