--- a/assets/main.css
+++ b/assets/main.css
@@ -111,178 +111,84 @@ border:2px solid #4700B2;
 }
 
 /*------------------------------------*\
+  $EVERY LAYOUT
+\*------------------------------------*/
+
+:root {
+  --ratio: 1.4;
+  --s-5: calc(var(--s-4) / var(--ratio));
+  --s-4: calc(var(--s-3) / var(--ratio));
+  --s-3: calc(var(--s-2) / var(--ratio));
+  --s-2: calc(var(--s-1) / var(--ratio));
+  --s-1: calc(var(--s0) / var(--ratio));
+  --s0: 1rem;
+  --s1: calc(var(--s0) * var(--ratio));
+  --s2: calc(var(--s1) * var(--ratio));
+  --s3: calc(var(--s2) * var(--ratio));
+  --s4: calc(var(--s3) * var(--ratio));
+  --s5: calc(var(--s4) * var(--ratio));
+  --measure: 60ch;
+  --light-white: rgba(255,255,255,0.2)
+}
+
+* {
+  max-width: var(--measure);
+}
+
+html,
+body,
+div,
+header,
+nav,
+main,
+footer,
+a,
+section {
+  max-width: none;
+}
+
+
+img{
+  align-self:baseline;
+  position:relative;
+  max-width: 100%;
+  }
+  
+
+  
+/*------------------------------------*\
   $MAIN
 \*------------------------------------*/
 
 body{
 font-family:'Suisse', serif;
-font-weight: 400;
-line-height:1.3;
-font-size:1.25rem;
+line-height:1.4;
 color: #454F4D;
 background-color: #ffffff;
-/* max-width: 650px; */
-}
-
-.workdown{
-  position:fixed;
-  bottom:3vh;
-  left: 50%;
-transform: translateX(-50%);
-}
-
-.titles{
-  position:fixed;
-  top:3vh;
-  left: 50%;
-  transform: translateX(-50%);
-  width:1100%;
-}
-
-.workdown :after{
-    content: '↓';
-    margin:0px 0px 0px 10px;
-    text-decoration:none;
- 
- } 
-}
-
-
-.longform p, .longform li, .longform h3{
-  margin-bottom: .5em;
-  font-size: 1.2rem;
-}
-
-.caption, .longform .caption{
-  font-size:1rem;
-  text-align:center;
-  max-width:100%;
-}
-
-.longform .colophon{
-  font-size:1rem;
-}
-
-pre{
-text-align: center;
-}
-
-a,
-a:link,
-a:visited,
-a:hover,
-a:active{
-  text-decoration: none;
-}
-
-a{
-color: #2c2c2c;
-}
-
-a:hover{
-color:#4B3666;
-}
-
-
-.slide{
-  background-color: rgba(255,255,255,1);
-  width:100vw;
-  height:100vh;
-  margin:0;
-  display:flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  position:sticky;
-  top:0;
-  /* box-shadow: 0px 0px 50px rgba(0,0,0,0.1); */
-  padding:20px;
-}
-
-
-.slide.short{
-  height:90vh;
-}
-
-.slide.long{
-  height:inherit;
+padding:4vh 4vw;
 
 }
 
-.smallimg{
-  max-width: 200px;
-  margin:0 auto 30px;
+.big{
+  font-size:1.4em;
 }
 
-.postcontainer{
-  max-width:1200px;
-  margin: 4vh auto;
+.postbody > * + * {
+  margin-top: 1.4rem;
 }
-
-.postbody{
-  background-color: rgba(255,255,255,1);
-  width:100vw;
-  height:inherit;
-  margin:0;
-  display:flex;
-  flex-direction: column;
-  justify-content: center;
-  position:sticky;
-  top:0;
-  padding:10px;
-}
-
-.postbody p{
-  margin:20px 0;
-}
-
-
-
-.main{
-/* margin:16px;
-max-width:1200px; */
-}
-
-
-.list{
-  list-style: disc;
-  margin-left:1em;
-  margin-bottom:.5em;
-}
-
-.list li{
-  margin-bottom:.5em;
-}
-
-
-.sectiontitle{
-  /* color:#4B3666 !important; */
-  padding: 0 0 60px;
-}
-
-
-.otherprojectslist a{
-  color: #bebebe;
-  }
-  
-.otherprojectslist a:hover{
-color:#DDA6F7;
-}
-
-
 
 .home-list-item{
   display:flex;
   flex:1;
   flex-direction: column;
-  border-top:1px rgba(255,255,255,0.2) solid;
+  border-bottom:1px var(--light-white) solid;
   justify-content:space-between;
   align-items:stretch;
   padding:3vh 0;
 }
 
 .home-list{
-  border-bottom:1px rgba(255,255,255,0.2) solid;
+  border-top:1px rgba(255,255,255,0.2) solid;
 }
  
 .home-list-desc, .home-list-title{
@@ -305,9 +211,97 @@ color:#DDA6F7;
   padding:2vh 0;
 }
 
-.home-wrap{
-  padding:4vh 4vw;
+
+
+a,
+a:link,
+a:visited,
+a:hover,
+a:active{
+  text-decoration: none;
 }
+
+a{
+color: #2c2c2c;
+}
+
+a:hover{
+color:#4B3666;
+}
+
+
+/* .slide{
+  background-color: rgba(255,255,255,1);
+  width:100vw;
+  height:100vh;
+  margin:0;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  position:sticky;
+  top:0;
+  /* box-shadow: 0px 0px 50px rgba(0,0,0,0.1); */
+  padding:20px;
+}
+
+
+
+
+/* .smallimg{
+  max-width: 200px;
+  margin:0 auto 30px;
+} */
+
+/* .postcontainer{
+  max-width:1200px;
+  margin: 4vh auto;
+}
+
+.postbody{
+  background-color: rgba(255,255,255,1);
+  width:100vw;
+  height:inherit;
+  margin:0;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  position:sticky;
+  top:0;
+  padding:10px;
+} */
+
+/* .postbody p{
+  margin:20px 0;
+} */
+
+
+/* .list{
+  list-style: disc;
+  margin-left:1em;
+  margin-bottom:.5em;
+}
+
+.list li{
+  margin-bottom:.5em;
+} */
+
+
+/* .sectiontitle{
+  padding: 0 0 60px;
+} */
+
+
+/* .otherprojectslist a{
+  color: #bebebe;
+  }
+  
+.otherprojectslist a:hover{
+color:#DDA6F7;
+} */
+
+
+
 
 
 .inline-p{
@@ -320,8 +314,8 @@ color:#DDA6F7;
   flex-direction: column;
   justify-content: center;
   /* height:50vh; */
-  padding:60px 0;
-  margin:40px 0;
+  padding:var(--s3) 0;
+  margin:var(--s1) 0;
   background-color:#F7F7F7;
   text-align:center;
 }
@@ -361,30 +355,24 @@ color:#DDA6F7;
 
 }
 
-.final{
-  /* flex-basis:0;
+/* .final{
+  flex-basis:0;
   flex-direction: row;
-  height:33vh; */
-  /* padding:33vh 0 0; */
+  height:33vh;
+  padding:33vh 0 0;
   background-color: black;
   color:white;
-}
+} */
 
 /* .finalitem{
   flex: 1 1 0px
 } */
 
-.otherprojects{
+/* .otherprojects{
   background-color: #201F22;
   color:white;
-}
+} */
 
-.otherprojects > img{
-  border-radius: 4px;
-  /* background-blend-mode: luminosity; */
-  margin:0 auto;
-  /* background-colour: #201F22; */
-}
 
 .otherprojectslist{
   padding:0px 0 60px;
@@ -450,10 +438,10 @@ color:#DDA6F7;
 
 
 
-.title{
+/* .title{
   margin:16px 0 2em;
   font-size:inherit;
-}
+} */
 
 /* 
 header{
@@ -465,22 +453,16 @@ font-size:18px;
 } */
 
 
-.homelink a{
+/* .homelink a{
 color:#4B3666;
 display:inline;
 position: relative;
 text-decoration: none;
 margin:0 20px 0 0;
-}
+} */
 
 .opacity60{
 opacity:0.6;
-}
-
-img{
-align-self:baseline;
-position:relative;
-max-width: 100%;
 }
 
 
@@ -495,11 +477,6 @@ ol > li {
   padding-bottom:12px;
 }
 
-/* .post, .postimage, .projects, .journalpost{
-margin:24px 0 30px;
-}
-
- */
 
 
 
@@ -538,7 +515,7 @@ li, h3{
   margin:30px 0 0;
   border-radius:4px;
   padding:8px 16px;
-  border:2px solid rgba(255,255,255,0.3);
+  border:2px solid rgba(255,255,255,0.3);v
   display:inline-block;
 }
 
@@ -551,14 +528,18 @@ li, h3{
   max-width: 60ch;
 }
 
-.home{
-  background-color: #201F22;
-  color:white;
+.work-item{
+  max-width:900px;
+  text-indent:2em;
+  margin:8em 0;
 }
 
-.home a{
-  color:white;
+.work-item video, .work-item img, .work-item div{
+  border-radius:.25em;
+  margin: .25em 0;
+  text-indent:0;
 }
+
 
 
 @media only screen and (min-width: 800px) {
@@ -566,17 +547,11 @@ li, h3{
 
 
   body{
-    font-size:1.5rem;
+    font-size:var(--s1);
     }
     
-    .postbody{
-      font-size:1.6rem;
-    }
 
 
-  .main{
-    /* margin:48px; */
-    }
 
     .screen img, .no-screen img, .screen video, .no-screen video{
       padding: 24px 8px 2px;
@@ -658,17 +633,17 @@ li, h3{
     /* margin:48px auto; */
     }
 
-    .postcontainer{
+    /* .postcontainer{
       margin: 10vh auto;
-    }
+    } */
 
-    .postbody{
+    /* .postbody{
       font-size:2rem;
     }
 
     .postbody p{
       margin:20px 80px;
-    }
+    } */
 
 
     .screen img, .no-screen img, .screen video, .no-screen video{
@@ -683,41 +658,13 @@ li, h3{
 
     }
 
-    .finaleimg{
-      max-width: 1000px;
-      max-height:80vh;
-    }
-
-    .longform p, .longform li, .longform h3{
-      margin-bottom: 1em;
-      font-size: 2rem;
-      /* max-width: 80%; */
-    }
-
-    .caption, .longform .caption{
-      font-size:1.3rem;
-      text-align:center;
-      max-width:100%;
-    }
-
-    .longform .colophon{
-      font-size:1.3rem;
-    }
-
- 
     .image-contain{
       padding:80px 0;
       margin: 80px 0;
 
     }
 
-    .finalimage{
-      max-height:80vh; 
-      max-width:1200px;
-    }
+
 }
 
 
-.back-button{
-  border:3px solid rgba(0,0,0,0.1);
-}
