swap images to lower size and added alt tags

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -66,7 +66,7 @@
 <section class="work-item">
 	<h2>from 2017 to 2018 I worked at UK Parliament</h2>
 	<div class="">
-		<img src="/assets/images/home/parliament-home.png">
+		<img src="/assets/images/home/parliament-home.jpg" alt="photo of UK Parliament beta MPs page on a phone">
 	</div>
 	<p>where I was part of an ambitious team with the goal of making it easier to understand what MPs and Lords do everyday. </p>
 </section>
@@ -74,7 +74,7 @@
 <section class="work-item">
 	<h2>and from 2015 to 2017 I worked at the BBC</h2>
 	<div class="">
-		<img src="/assets/images/home/iplayer-home.png">
+		<img src="/assets/images/home/iplayer-home.kpg" alt="photo of iPlayer homepage on a laptop">
 	</div>
 	<p>where I worked on weather, BBC notifications, radio and finally iPlayer.  </p>
 </section>
