--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -55,7 +55,7 @@
 	<h2>I joined Farewill in 2018 to help change the way the world deals with death.</h2>
 	<div class="">
 <video width="100%" autoplay muted controls>
-		  <source src="/assets/images/home/farewill-homepage-small.mp4" type="video/mp4">
+		  <source src="/assets/images/home/farewill-homepage-small.mp4" alt="video of the farewill sign up process" type="video/mp4">
 		Your browser does not support videos.
 		</video> 
 	  </div>
