--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -74,7 +74,7 @@
 <section class="work-item">
 	<h2>and from 2015 to 2017 I worked at the BBC</h2>
 	<div class="">
-		<img src="/assets/images/home/iplayer-home.kpg" alt="photo of iPlayer homepage on a laptop">
+		<img src="/assets/images/home/iplayer-home.jpg" alt="photo of iPlayer homepage on a laptop">
 	</div>
 	<p>where I worked on weather, BBC notifications, radio and finally iPlayer.  </p>
 </section>
