adding case studies

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -63,7 +63,7 @@
 	<p>At Farewill I lead design on wills and growth. I’m proud to be part of a team that’s revolutionising how people plan for their death. We’ve got an industry leading product experience, and have won National Will Writer of the year for two years running. </p>
 	<p>Since Tom H and I joined as a pair of lead designers, we’ve seen Farewill grow from a wills company into an everything-to-do-with-death company, with a design team to match (now 13 of us across research, content, product and brand design). </p>
 
-	<!-- <div class="table-list">
+	<div class="table-list">
 		
 		{%  for post in site.categories.farewill %}
 			{% if post.url != page.url %} 
@@ -81,7 +81,7 @@
 			{% endif %}
 		{% endfor %}
 	
-	</div> -->
+	</div>
 
 
 </section>
@@ -94,7 +94,7 @@
 	<p>where I was part of an ambitious team with the goal of making it easier to understand what MPs and Lords do everyday. </p>
 
 	
-	<!-- <div class="table-list">
+	<div class="table-list">
 		
 		{%  for post in site.categories.parliament %}
 			{% if post.url != page.url %} 
@@ -112,7 +112,7 @@
 			{% endif %}
 		{% endfor %}
 	
-	</div> -->
+	</div>
 
 
 </section>
@@ -124,7 +124,7 @@
 	</div>
 	<p>where I worked on weather, BBC notifications, radio and finally iPlayer.  </p>
 
-	<!-- <div class="table-list">
+	<div class="table-list">
 		
 		{%  for post in site.categories.bbc %}
 			{% if post.url != page.url %} 
@@ -142,7 +142,7 @@
 			{% endif %}
 		{% endfor %}
 	
-	</div> -->
+	</div>
 
 
 
