--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -55,12 +55,12 @@
 	<h2>I joined Farewill in 2017 to help change the way the world deals with death.</h2>
 	<div class="">
 		
-		<!-- <video width="100%" autoplay muted loop>
+		<video width="100%" autoplay muted loop>
 		  <source src="/assets/images/home/farewill-homepage-vsmall-looped.mp4" alt="video of the farewill sign up process" type="video/mp4">
 		Your browser does not support videos.
-		</video>  -->
+		</video> 
 
-		<img src="/assets/images/home/farewill-home.png" alt="photo of Farewill homepage on a phone">
+		<!-- <img src="/assets/images/home/farewill-home.png" alt="photo of Farewill homepage on a phone"> -->
 
 	</div>
 	<p>At Farewill I lead design on wills and growth. I’m proud to be part of a team that’s revolutionising how people plan for their death. We’ve got an industry leading product experience, and have won National Will Writer of the year for two years running. </p>
